--- a/squarespace/template/styles/footballpool.css
+++ b/squarespace/template/styles/footballpool.css
@@ -146,7 +146,6 @@
 /*-- ADMIN - Setup Games module --*/
 #setup-games-module .activity-indicator { position: absolute; right: 0; top:-10px; }
 #setup-games-module #save-error { display: none; padding-bottom: 10px; }
-
 #user-pick-module #logged-as-user { background-color: #CC4; 
 	padding: 20px;
 	margin: 0 0 30px 0;
@@ -154,6 +153,9 @@
 	font-weight: bold;
 	border: 1px solid black;
 }
+
+/*-- ADMIN - Setup Users module --*/
+#setup-users-module .activity-indicator { position: absolute; right: 0; top:-10px; }
 
 
 /*-- team icons --*/
